force-app/main/default/objects/leankor__ProjectScheduleBlackout__c/leankor__ProjectScheduleBlackout__c.object-meta.xml
<CustomObject>
    <description>Holidays and blackout periods associated to a project board.</description>
    <label>Project Schedule Blackout</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Project Schedule Blackout Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Schedule Blackouts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>