force-app/main/default/objects/leankor__ProjectScheduleBlackout__c/fields/leankor__EndDate__c.field-meta.xml
<CustomField>
    <fullName>leankor__EndDate__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>Date the holiday or blackout ends.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the date the holiday or blackout ends.</inlineHelpText>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>