force-app/main/default/objects/leankor__ProjectScheduleBlackout__c/fields/leankor__ProjectBoard__c.field-meta.xml
<CustomField>
    <fullName>leankor__ProjectBoard__c</fullName>
    <description>The Value Stream instance that includes this Project Schedule Blackout.</description>
    <inlineHelpText>Select the board that has this blackout.</inlineHelpText>
    <label>Project Board</label>
    <referenceTo>leankor__ValueStream__c</referenceTo>
    <relationshipLabel>Project Schedule Blackouts</relationshipLabel>
    <relationshipName>ProjectScheduleBlackouts_ValueStream</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>