force-app/main/default/objects/leankor__ProjectScheduleBlackout__c/fields/leankor__StartDate__c.field-meta.xml
<CustomField>
    <fullName>leankor__StartDate__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>Date the holiday or blackout starts.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the date the holiday or blackout starts.</inlineHelpText>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>