force-app/main/default/objects/leankor__ProjectScheduleBlackout__c/validationRules/leankor__End_Date_Entry.validationRule-meta.xml
<ValidationRule>
    <fullName>leankor__End_Date_Entry</fullName>
    <active>true</active>
    <description>Validation for &quot;End Date&quot; requirement.</description>
    <errorConditionFormula>leankor__EndDate__c &lt; leankor__StartDate__c</errorConditionFormula>
    <errorDisplayField>leankor__EndDate__c</errorDisplayField>
    <errorMessage>End Date must be on or after the Start Date.</errorMessage>
</ValidationRule>